[gd_scene load_steps=8 format=2]

[ext_resource path="res://draggable_items/egg/sprites/egg.png" type="Texture" id=1]
[ext_resource path="res://draggable_items/sprites/health_bar_progress.png" type="Texture" id=2]
[ext_resource path="res://draggable_items/sprites/health_bar_under.png" type="Texture" id=3]
[ext_resource path="res://draggable_items/egg/Egg.gd" type="Script" id=4]
[ext_resource path="res://gui/sprites/frog_button.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 54.0

[sub_resource type="CircleShape2D" id=2]
radius = 54.0

[node name="Egg" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -24 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = 56.0
margin_right = 32.0
margin_bottom = 96.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GrowthBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = 80.0
margin_right = 32.0
margin_bottom = 120.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="TouchScreenButton" parent="."]
position = Vector2( -54, -54 )
shape = SubResource( 2 )

[node name="GrowthTimer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frog" type="Sprite" parent="Menu"]
position = Vector2( -48, -112 )
texture = ExtResource( 5 )
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="released" from="MenuButton" to="." method="_on_MenuButton_released"]
[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]
